--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Roboto',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+@media screen and (min-width:768px) {
+  .container{
+    max-width: 1140px!important;
+    margin: auto;
+    padding: 0 15px;    
+  }
+  }
+
+  svg{
+    max-width: 100%;
+    font-size: 60px;;
+  }
+
+  .footer-icon svg{
+    font-size: 16px;;
+  }
+
+  .gallery .grid2{
+    grid-column: 2/4;
+    grid-row: 1/3;
+  }
+
+  .gallery .grid6{
+    grid-column: 1/3;
+    grid-row: 3/5;
+  }
+
+  .gallery  img {
+    height: 100%!important;
+    object-fit: cover;
+  }
